--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -4919,7 +4919,23 @@
         }
       }
     },
-    "result.rank_format": {},
+    "result.rank_format": {
+      "extractionState": "manual",
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "#%d"
+          }
+        },
+        "ja": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "第%d位"
+          }
+        }
+      }
+    },
     "result.score.base_points": {
       "extractionState": "manual",
       "localizations": {
