Revert "localization hotfix/route efficiency minimum value to 0.9"

--- a/ios/escape/escape/Localizable.xcstrings
+++ b/ios/escape/escape/Localizable.xcstrings
@@ -5146,23 +5146,7 @@
         }
       }
     },
-    "result.rank_format": {
-      "extractionState": "manual",
-      "localizations": {
-        "en": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "#%d"
-          }
-        },
-        "ja": {
-          "stringUnit": {
-            "state": "translated",
-            "value": "%d位"
-          }
-        }
-      }
-    },
+    "result.rank_format": {},
     "result.score.base_points": {
       "extractionState": "manual",
       "localizations": {
